# learning-rust

./: LICENSE  README.md
guess-the-number-game/: Cargo.toml
guess-the-number-game/src/: main.rs
hello-rust/: Cargo.toml  README.md
ownership/: Cargo.toml
ownership/src/: main.rs
simple-rest-api/: Cargo.toml  README.md  Settings.toml
simple-rest-api/src/: extractors.rs  main.rs  settings.rs
simple-rest-api/src/euroleague/: euroleague.rs  mod.rs  models.rs
simple-rest-api/src/models/: greeting.rs  mod.rs
to-do-app/: Cargo.toml  to-do-list.json
to-do-app/src/: cli.rs  main.rs  task.rs
